<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_madlibs"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_madlibs" />
        <item
            android:id="@+id/nav_scifi"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_scifi" />
        <item
            android:id="@+id/nav_guess"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_guess" />
        <item
            android:id="@+id/nav_pokemon"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_pokemon" />
        <item
            android:id="@+id/nav_doodle"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_doodle" />
    </group>
</menu>